--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>Снежки</p>
             </li>
         </ul>
-
+        <!-- About Bed Wars Section -->
         <h3>Bed Wars mini game</h3>
         <p>В игре есть (в инвентаре) pets из донатных пассов, есть скины на оружие, есть один донатный скин на блоки, большой набор ресурсов в дополнительном инвентаре.</p>
         <p>Руны:</p>
