--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header>
-        <div class="container footer">
+    <header class="">
+        <div class="container header">
             <img class="site-logo" src="./images/site-logo.png" alt="">
             <div>ABOUT</div>
             <div>GALLERY</div>
@@ -21,73 +21,91 @@
         </div>
     </header>
     <main>
+    
         <!-- Hero Section -->
-        <h1>Продается игровой аккаунт</h1>
+        <div class="container">
+            <h1>Продается игровой аккаунт</h1>
+            <button>Купить</button>
+        </div>
 
         <!-- About SkyBlock Section -->
-        <h3>SkyBlock mini game</h3>
-        <p>В игре у меня есть большой остров из злолотых слитков. Так же есть большое хранилище ресурсов, в котором находится от 15 до 25 сундуков с крутыми ресурсами.Дополнительно приобретен Флай. Также есть 20 млн. монет.</p>
-        <p>Ресурсы:</p>
-        <ul>
-            <li>
-                <p>Аметисты</p>
-            </li>
-            <li>
-                <p>Удар молнии</p>
-            </li>
-            <li>
-                <p>Боевые ёлки</p>
-            </li>
-            <li>
-                <p>Ёлки</p>
-            </li>
-            <li>
-                <p>Экскалибуры, аметистовые мечи, мечи за 6 млн. монет, и за 300 тыс. монет</p>
-            </li>
-            <li>
-                <p>Звездные пистолеты</p>
-            </li>
-            <li>
-                <p>Различные блоки (золотые и прочие)</p>
-            </li>
-            <li>
-                <p>Титановая броня, аметистовая броня, броня Санты</p>
-            </li>
-            <li>
-                <p>Снежки</p>
-            </li>
-        </ul>
-        <!-- About Bed Wars Section -->
-        <h3>Bed Wars mini game</h3>
-        <p>В игре есть (в инвентаре) pets из донатных пассов, есть скины на оружие, есть один донатный скин на блоки, большой набор ресурсов в дополнительном инвентаре.</p>
-        <p>Руны:</p>
-        <ul>
-            <li>
-                <p>Красные (все вампирки 1 уровня)</p>
-            </li>
-            <li>
-                <p>Синие (защита от первого до третьего уровня) </p>
-            </li>
-            <li>
-                <p>Желтые (асуры от первого до третьего уровня)</p>
-            </li>
-            <li>
-                <p>Фиолетовые (в начале игры вы получаете предметы для ломания кровати)</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h3>SkyBlock mini game</h3>
+            <p>В игре у меня есть большой остров из злолотых слитков. Так же есть большое хранилище ресурсов, в котором находится от 15 до 25 сундуков с крутыми ресурсами.Дополнительно приобретен Флай. Также есть 20 млн. монет.</p>
+            <p>Ресурсы:</p>
+            <ul>
+                <li>
+                    <p>Аметисты</p>
+                </li>
+                <li>
+                    <p>Удар молнии</p>
+                </li>
+                <li>
+                    <p>Боевые ёлки</p>
+                </li>
+                <li>
+                    <p>Ёлки</p>
+                </li>
+                <li>
+                    <p>Экскалибуры, аметистовые мечи, мечи за 6 млн. монет, и за 300 тыс. монет</p>
+                </li>
+                <li>
+                    <p>Звездные пистолеты</p>
+                </li>
+                <li>
+                    <p>Различные блоки (золотые и прочие)</p>
+                </li>
+                <li>
+                    <p>Титановая броня, аметистовая броня, броня Санты</p>
+                </li>
+                <li>
+                    <p>Снежки</p>
+                </li>
+            </ul>
+        </div>
 
+        <!-- SkyBlock Gallery -->
         <ul>
             <li><img src="./images/img (1).jpg" alt="picture-1"></li>
             <li><img src="./images/img (2).jpg" alt="picture-2"></li>
             <li><img src="./images/img (3).jpg" alt="picture-3"></li>
         </ul>
 
+        <!-- About Bed Wars Section -->
+        <div class="container">
+            <h3>Bed Wars mini game</h3>
+            <p>В игре есть (в инвентаре) pets из донатных пассов, есть скины на оружие, есть один донатный скин на блоки, большой набор ресурсов в дополнительном инвентаре.</p>
+            <p>Руны:</p>
+            <ul>
+                <li>
+                    <p>Красные (все вампирки 1 уровня)</p>
+                </li>
+                <li>
+                    <p>Синие (защита от первого до третьего уровня) </p>
+                </li>
+                <li>
+                    <p>Желтые (асуры от первого до третьего уровня)</p>
+                </li>
+                <li>
+                    <p>Фиолетовые (в начале игры вы получаете предметы для ломания кровати)</p>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Bed Wars Gallery -->
+        <ul>
+            <li><img src="./images/img (1).jpg" alt="picture-1"></li>
+            <li><img src="./images/img (2).jpg" alt="picture-2"></li>
+            <li><img src="./images/img (3).jpg" alt="picture-3"></li>
+        </ul>
+
+        <!-- Payment info -->
         <div>Payment</div>
 
-        <div>CONTACTS</div>
-        <div> Viber: +38 (093) 265 74 78</div>
     </main>
     <footer>
+        <div>CONTACTS</div>
+        <div> Viber: +38 (093) 265 74 78</div>
     </footer>
 </body>
 </html>
