--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         </div>
     </header>
     <main>
-    
         <!-- Hero Section -->
         <div class="container">
             <h1>Продается игровой аккаунт</h1>
@@ -62,14 +61,14 @@
                     <p>Снежки</p>
                 </li>
             </ul>
+        
+            <!-- SkyBlock Gallery -->
+            <ul class="gallery-list">
+                <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (1).jpg" alt="picture-1"></li>
+                <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (2).jpg" alt="picture-2"></li>
+                <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (3).jpg" alt="picture-3"></li>
+            </ul>
         </div>
-
-        <!-- SkyBlock Gallery -->
-        <ul>
-            <li><img src="./images/img (1).jpg" alt="picture-1"></li>
-            <li><img src="./images/img (2).jpg" alt="picture-2"></li>
-            <li><img src="./images/img (3).jpg" alt="picture-3"></li>
-        </ul>
 
         <!-- About Bed Wars Section -->
         <div class="container">
@@ -90,22 +89,25 @@
                     <p>Фиолетовые (в начале игры вы получаете предметы для ломания кровати)</p>
                 </li>
             </ul>
+
+            <!-- Bed Wars Gallery -->
+            <ul class="gallery-list">
+                <li><img class="gallery-list__picture" src="./images/img (1).jpg" alt="picture-1"></li>
+                <li><img class="gallery-list__picture" src="./images/img (2).jpg" alt="picture-2"></li>
+                <li><img class="gallery-list__picture" src="./images/img (3).jpg" alt="picture-3"></li>
+            </ul>
         </div>
 
-        <!-- Bed Wars Gallery -->
-        <ul>
-            <li><img src="./images/img (1).jpg" alt="picture-1"></li>
-            <li><img src="./images/img (2).jpg" alt="picture-2"></li>
-            <li><img src="./images/img (3).jpg" alt="picture-3"></li>
-        </ul>
-
-        <!-- Payment info -->
-        <div>Payment</div>
-
+        <!-- Payment info section -->
+        <div class="container">
+           <div>Payment</div> 
+        </div>
     </main>
+    <!-- Footer section -->
     <footer>
-        <div>CONTACTS</div>
-        <div> Viber: +38 (093) 265 74 78</div>
+        <div class="container">
+            <div> Viber: +38 (093) 265 74 78</div>
+        </div>
     </footer>
 </body>
 </html>
