--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <!-- SkyBlock Gallery -->
             <ul class="gallery-list">
                 <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (1).jpg" alt="picture-1"></li>
-                <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (2).jpg" alt="picture-2"></li>
-                <li class="gallery-list__item"><img class="gallery-list__picture" src="./images/img (3).jpg" alt="picture-3"></li>
+                <li class="gallery-list__item"><img class="gallery-list__picture" src="" alt="picture-2"></li>
+                <li class="gallery-list__item"><img class="gallery-list__picture" src="" alt="picture-3"></li>
             </ul>
         </div>
 
@@ -93,8 +93,8 @@
             <!-- Bed Wars Gallery -->
             <ul class="gallery-list">
                 <li><img class="gallery-list__picture" src="./images/img (1).jpg" alt="picture-1"></li>
-                <li><img class="gallery-list__picture" src="./images/img (2).jpg" alt="picture-2"></li>
-                <li><img class="gallery-list__picture" src="./images/img (3).jpg" alt="picture-3"></li>
+                <li><img class="gallery-list__picture" src="" alt="picture-2"></li>
+                <li><img class="gallery-list__picture" src="" alt="picture-3"></li>
             </ul>
         </div>
 
